<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:configChanges="orientation"
    android:screenOrientation="portrait"
    tools:context="tk.aimeschneider.classroomlocal.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="20dp"
            app:srcCompat="@drawable/cadenas" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:text="@string/login"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/defaultLogin" />

        <TextView
            android:id="@+id/txtmdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:text="@string/mdp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtMdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/defaultLogin" />

        <TextView
            android:id="@+id/tvServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:text="@string/server"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/lyServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtServer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:inputType="numberSigned|number|numberDecimal|phone" />

            <Spinner
                android:id="@+id/spServer"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/edtServer"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:spinnerMode="dialog" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/conect" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>