<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/eiffel_tower"
    android:scaleType="centerCrop"
    tools:context="tk.aimeschneider.classroomlocal.MainActivity">

    <TextView
        android:id="@+id/txtBienvenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="50dp"
        android:textColor="@color/text_layout2"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnQuizz"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/txtBienvenue"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/border"
        android:text="@string/quizz"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnArrondissement"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/btnQuizz"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/border"
        android:text="@string/arrondissement"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnFriend"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/btnArrondissement"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="75dp"
        android:background="@drawable/border"
        android:elevation="0dp"
        android:text="@string/friends"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>