<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayoutFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_layout"
    android:configChanges="orientation"
    android:screenOrientation="portrait"
    tools:context="tk.aimeschneider.classroomlocal.QuizzActivity">


    <RelativeLayout
        android:id="@+id/rl_quizz"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/timebar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:progress="0"
            android:theme="@style/LinearProgress" />

        <RelativeLayout
            android:id="@+id/rl_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timebar"
            android:orientation="horizontal">


            <RelativeLayout

                android:id="@+id/Avatar1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/layoutCompteur"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/layoutCompteur"
                android:orientation="vertical">

               <ImageView
                    android:id="@+id/imgAvatar1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/avatat_espritdufeu" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layoutCompteur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:baselineAligned="false"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_pseudo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtScore1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/pseudo1"
                            android:textColor="@color/text_layout" />

                        <TextView
                            android:id="@+id/txtIntScore1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/score1"
                            android:textColor="@android:color/holo_green_light"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtTpsRestant"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tpsRestant"
                            android:textColor="@color/text_layout" />

                        <TextView
                            android:id="@+id/txtIntTpsRestant"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/tpsRestantValue"
                            android:textColor="@color/text_layout2"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtScore2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/pseudo2"
                            android:textColor="@color/text_layout" />

                        <TextView
                            android:id="@+id/txtIntScore2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/score2"
                            android:textColor="@android:color/holo_green_light"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/Avatar2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/layoutCompteur"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/layoutCompteur"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgAvatar2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/avatat_espritdufeu" />
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/LayoutQuestion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rl_score"
            android:layout_marginTop="25dp"
            android:background="@drawable/eiffel_tower"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="25dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/question"
                android:textColor="@color/text_layout2"
                android:textSize="30sp"
                android:textStyle="bold" />


        </RelativeLayout>


    </RelativeLayout>

    <!-- Navigation View -->

    <android.support.design.widget.NavigationView
        android:id="@+id/nvQuizz"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:itemTextColor="?android:textColorPrimary"
        app:menu="@menu/nav_menu" />


</android.support.v4.widget.DrawerLayout>