<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:background="@drawable/border">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/border"></RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlLeftFriends"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/rlRigthFriends"
        android:layout_alignBottom="@id/rlRigthFriends"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="2dp">

        <ImageView
            android:id="@+id/imgAvatarFriends"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignLeft="@id/imgConnectFriend"
            android:layout_alignParentStart="true"
            android:baselineAlignBottom="false"
            android:src="@drawable/photochaouche" />

        <ImageView
            android:id="@+id/imgConnectFriend"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignBottom="@+id/imgAvatarFriends"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="false"
            android:background="@color/greenFluo" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlRigthFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2dp">

        <RelativeLayout
            android:id="@+id/rlNomPrenomFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/txtPrenomFriend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_toRightOf="@+id/txtNomFriend"
                android:text="@string/pseudo1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNomFriend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/pseudo2"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtLastSoreFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlNomPrenomFriends"
            android:layout_centerHorizontal="false"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/score1"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>


</RelativeLayout>